2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Sort the certs.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* gtk-gui/gui.stetic:
	* MonoDevelop.IPhone.addin.xml:
	* Gui/IPhoneSigningKeyPanel.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneSigningKeyPanelWidget.cs:
	  Improved signing GUI.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.addin.xml: Remove duplicate attribute.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.addin.xml: Rearrange panels.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Add missing ShowAll call.

2009-09-10  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneBuildOptionsPanel.cs: Expose the options set so
	  the signing panel can use it.

	* gtk-gui/gui.stetic:
	* Gui/IPhoneSigningKeyPanel.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneSigningKeyPanelWidget.cs:
	  Partially reworked the signing options panel.

	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	  Flush.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.addin.xml: Fix ordering of commands
	  inserted in menu.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Don't try to pass default
	  entitlements to mtouchpack. It can do that itself.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Check that the provisioning profile
	  permitted app ID matches the app ID.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Handle xcent generation and
	  embedding the .mobileprovision.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>

	* PropertyList/PlistDocument.cs: Fix reading of self-closing
	  elements in dictionary values.

2009-09-08  Michael Hutchinson  <mhutchinson@novell.com>
